--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Travel Bot</title>   
   <link href="css/reset.css" rel="stylesheet" type="text/css"> 
-  <link href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
+  <link href="https://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
   <link href="css/style.css" rel="stylesheet" type="text/css"> 
   <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
   <script>var __adobewebfontsappname__="dreamweaver"</script>
@@ -85,7 +85,7 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src='https://cdn.rawgit.com/pguso/jquery-plugin-circliful/master/js/jquery.circliful.min.js'></script>
-<script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js" ></script>
+<script src="https://code.jquery.com/ui/1.10.2/jquery-ui.js" ></script>
 <script src="javascript/script.js" type="text/javascript"></script>
 	
 </body>
