--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="css/reset.css" rel="stylesheet" type="text/css"> 
   <link href="https://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
   <link href="css/style.css" rel="stylesheet" type="text/css"> 
-  <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
+  <script src="https://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
   <script>var __adobewebfontsappname__="dreamweaver"</script>
 </head>
 <body>
