more name changes

--- a/travelbot.html
+++ b/travelbot.html
@@ -7,7 +7,7 @@
   <title>Travel Bot</title>   
   <link href="css/reset.css" rel="stylesheet" type="text/css"> 
   <link href="https://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
-  <link href="css/style.css" rel="stylesheet" type="text/css"> 
+  <link href="css/travelbotstyle.css" rel="stylesheet" type="text/css"> 
   <script src="https://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
   <script>var __adobewebfontsappname__="dreamweaver"</script>
 </head>
@@ -86,7 +86,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src='https://cdn.rawgit.com/pguso/jquery-plugin-circliful/master/js/jquery.circliful.min.js'></script>
 <script src="https://code.jquery.com/ui/1.10.2/jquery-ui.js" ></script>
-<script src="javascript/script.js" type="text/javascript"></script>
+<script src="javascript/travelbotscript.js" type="text/javascript"></script>
 	
 </body>
 </html>
