--- a/travelbot.html
+++ b/travelbot.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Travel Bot</title>   
-  <link href="css/reset.css" rel="stylesheet" type="text/css"> 
-  <link href="https://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
-  <link href="css/travelbotstyle.css" rel="stylesheet" type="text/css"> 
+  <title>Travel Bot</title>
+  <link href="css/reset.css" rel="stylesheet" type="text/css">
+  <link href="https://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet">
+  <link href="css/travelbotstyle.css" rel="stylesheet" type="text/css">
   <script src="https://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
   <script>var __adobewebfontsappname__="dreamweaver"</script>
 </head>
 <body>
-<div class="container"> 
+<div class="container">
   <header> <a href="">
     <h4 class="logo">Travel Bot</h4>
-    </a>    
+    </a>
   </header>
- 
+
   <section class="hero" id="hero">
-    <h2 class="hero_header">TRAVELERS AWARENESS <span class="light">VERY IMPORTANT TIPS FOR YOU</span></h2>
-    <p class="tagline">INTERESTED IN WHAT WILL THE WEATHER BE LIKE IN ICELAND DURING THE 4TH OF JULY?</p>
+    <h2 class="hero_header">FIND OUT IMPORTANT TRAVEL INFORMATION AND TIPS</h2>
+    <p class="tagline">A travelers bestfriend</p>
     <form id="info-form">
       <label for="city-input">Enter Destination City:</label><br>
       <input type="text" id="city-input">
@@ -28,58 +28,54 @@
       <label for="country-input">Country:</label><br>
       <input type="text" id="country-input"><br>
       <label for="startDate-input">Check-in Date:</label><br>
-      <input class="dateCollection" id="startDate-input" name="startDate" type="text" value="" placeholder="mm/dd/yyyy"><br>
+      <input class="dateCollection" id="startDate-input" name="startDate" type="text" value="" placeholder="Comming soon!"><br>
       <label for="finishDate-input">Check-out Date:</label><br>
-      <input class="dateCollection" id="finishDate-input" name="finishDate" type="text" value="" placeholder="mm/dd/yyyy"><br><br>
-      <input id="add-entry" type="submit" value="Submit">
+      <input class="dateCollection" id="finishDate-input" name="finishDate" type="text" value="" placeholder="Comming soon!"><br><br>
+      <input class="button" id="add-entry" type="submit" value="Submit">
     </form>
   </section>
-  
+
   <!-- Stats Gallery Section -->
   <div class="gallery">
     <div class="thumbnail">
       <h1 class="stats">DESTINATION FORECAST</h1>
-        <div id="api1results">
-          <p id="fahrenheit"></p>
-          <p id="celsius"></p>
-          <p id="cityResult"></p>
-          <p id="countryResult"></p>
-        </div>
+      <div id="api1results">
+        <p id="fahrenheit"></p>
+        <p id="celsius"></p>
+        <p id="cityResult"></p>
+        <p id="countryResult"></p>
+      </div>
     </div>
     <div class="thumbnail">
       <h1 class="stats">SUGGESTED ITEMS TO TAKE WITH YOU</h1>
-      <p>One line description</p>
+      <p>Comming Soon!</p>
     </div>
     <div class="thumbnail">
-      <h1 class="stats">VACCINATIONS SUGGESTED BY CDC</h1>
-      <p>One line description</p>
+      <h1 class="stats">VACCINATIONS &amp; TRAVEL ADVISORIES</h1>
+      <a id="click_here" href= "">Click Here</a>
     </div>
   </div>
-  <!-- Parallax Section -->
-  <section class="banner">
-    <h2 class="hero_header">TRAVELERS STATE DEPARTMENT ADVISORY</h2>    
-    <p class="tagline">Travel Warnings</p>
-    
-  </section>
-  <!-- More Info Section -->  
+  <!-- Map Section -->
+  <div id="map">
+
+  </div>
+  <!-- More Info Section -->
   <section class="footer_banner" id="contact">
     <h2 class="hidden">Footer Banner Section </h2>
-    <p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES</p>
+    <p class="hero_header">LET US KNOW HOW YOU LIKE THE APP</p>
     <form>
-    <div class="form-group tagline">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-    </div>
-    <div class="form-group tagline">
-        <label for="exampleInputPassword1">Comment</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Comment">
-    </div>
-    
-<!--     <h1> Test</h1> -->
-</form>
-    <div class="button">Submit</div>
+      <div class="form-group tagline">
+          <label for="name"></label>
+          <input type="name" class="form-control" id="name-input" placeholder="Name">
+      </div>
+      <div class="form-group tagline">
+          <label for="message"></label>
+          <input type="message" class="form-control" id="message-input" placeholder="Message">
+      </div>
+    </form>
+    <div id="messagePost"> </div>
   </section>
-  
+
   <!-- Copyrights Section -->
   <div class="copyright">&copy;2017 - <strong>GoldenStateCoders</strong></div>
 </div>
@@ -87,6 +83,8 @@
 <script src='https://cdn.rawgit.com/pguso/jquery-plugin-circliful/master/js/jquery.circliful.min.js'></script>
 <script src="https://code.jquery.com/ui/1.10.2/jquery-ui.js" ></script>
 <script src="javascript/travelbotscript.js" type="text/javascript"></script>
-	
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoBixEgDuSpTPjepvL_RGMUlHUY0UlAgs&libraries=places&callback=initMap" async defer></script> -->
+<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+<div id="map_script"></div>
 </body>
 </html>
